# StructPDE-WT-TT

./: .gitignore  READEME.md  pyproject.toml  requirements-remote-minimal.txt
configs/: data.yaml  model.yaml
scripts/: 00_download_data.py  01_preprocess_bulk.py  02_run_lr_and_structure.py  03_run_pde_bulk_proxy.py  04_eval_bulk.py  05_preprocess_scpca_singlecell.py  06_run_spatial_pde.py  07_fetal_reference_mapping.py  08_download_structure_weights.py  09_eval_full_ablation.py  10_compile_paper_case_studies.py  11_run_structure_complex_confidence.py  12_structure_evidence_rescoring.py  13_run_refined_key_axis_predictions.py  generate_paper_figures.py  remote_full_pipeline.py  remote_run.sh  run_all_local.ps1  run_all_local.sh  upload_remote_assets.py
src/wtai/: __init__.py  paths.py
src/wtai/communication/: lr_database.py
src/wtai/eval/: bulk_validation.py
src/wtai/pde/: graph_laplacian.py  reaction_diffusion.py
src/wtai/structure/: structure_score.py
