[project]
name = "structpde-wt-tt"
version = "0.1.0"
description = "Structure-constrained graph reaction-diffusion model for Wilms tumor transition trajectories."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "requests",
  "tqdm",
  "h5py",
  "openpyxl",
  "matplotlib",
  "seaborn",
  "networkx",
  "torch",
  "xgboost",
  "paramiko",
]

[tool.setuptools.packages.find]
where = ["src"]
